<resources>
    <string name="app_name">LayOut Test</string>
    <string name="button">button</string>
    <string name="button_1">button 1</string>
    <string name="btn_2">btn 2</string>
    <string name="rb_0_2">rb(0,2)</string>
    <string name="btn_1">btn ()1</string>
    <string name="large_text1">Large Text1</string>
    <string name="linearvertical">LinearVertical</string>
    <string name="linear_horizonatl">Linear horizonatl</string>
    <string name="grid">GRID</string>
    <string name="edittext1">edittext1</string>
    <string name="large_text_2">Large Text 2</string>
    <string name="large_text3">Large Text3</string>
    <string name="edit_text_2">edit text 2</string>
    <string name="edit_text_3">edit text 3</string>
    <string name="edit_text_1">edit text 1</string>
    <string name="edit_text_second">edit text second</string>
    <string name="enter_age">enter age</string>
    <string name="feed_back_please">feed back please</string>
    <string name="submit_all_details">SUBMIT ALL DETAILS</string>
    <string name="hybrid_layout">HYBRID LAYOUT</string>
    <string name="ph_number">ph number</string>
    <string name="name">Name</string>
    <string name="email_id">email id</string>
    <string name="postal_adrress">postal adrress</string>
    <string name="password">password</string>
    <string name="dob">DOB</string>
    <string name="vikram_shasrty">VIKRAM SHASRTY</string>
<string name="switcher">switcher</string>
    <string name="enter_name">enter name</string>
    <string name="hmmmmmmmmmm">hmmmmmmmmmm</string>
    <string name="smoking">SMoking ?</string>
    <string name="drinking">Drinking ?</string>
    <string name="fair">Fair</string>
    <string name="whetaish">Whetaish</string>
    <string name="fiar_skin">FIAR SKIN</string>
    <string name="wheatish_skin">Wheatish Skin</string>
    <string name="dark_skin">Dark skin</string>
    <string name="submit_skin_quality">subMit skin quality</string>
    <string name="chetan">chetan</string>
    <string name="extra">extra ?</string>
    <string name="feed_back">feed back</string>
</resources>
