<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chetan.layouttest.MainActivity"
    android:onClick="weightActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hybrid_layout"
        android:id="@+id/button"
        android:onClick="hybridLayOut"
        android:layout_below="@+id/button7"
        android:layout_marginTop="39dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoking"
        android:id="@+id/cbSmoking"
        android:checked="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="habits" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linearvertical"
        android:id="@+id/button6"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="linearVertical" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_horizonatl"
        android:id="@+id/button7"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:onClick="linearHorizonatl"
        android:layout_below="@+id/button6" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid"
        android:id="@+id/button8"
        android:onClick="gridLayOut"
        android:layout_below="@+id/button7"
        android:layout_toRightOf="@+id/cbSmoking"
        android:layout_toEndOf="@+id/cbSmoking" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drinking"
        android:id="@+id/cbDrinking"
        android:layout_marginTop="101dp"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:onClick="habits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvSMoking"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:layout_marginLeft="81dp"
        android:layout_marginStart="81dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvDrinking"
        android:layout_alignTop="@+id/cbDrinking"
        android:layout_alignLeft="@+id/tvSMoking"
        android:layout_alignStart="@+id/tvSMoking" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvDrinking"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rgSkinTon">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiar_skin"
            android:id="@+id/rbFairSkin"
            android:checked="false"
            android:onClick="skinTone2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheatish_skin"
            android:id="@+id/rbWheatishSkin"
            android:checked="false"
            android:nestedScrollingEnabled="false"
            android:onClick="skinTone2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_skin"
            android:id="@+id/rbDarkSkin"
            android:checked="false"
            android:onClick="skinTone2" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_skin_quality"
            android:id="@+id/btnSkinQuality"
            android:layout_gravity="center_horizontal"
            android:onClick="skinTone" />
    </RadioGroup>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivphoto"
        android:layout_below="@+id/button6"
        android:layout_alignLeft="@+id/tvSMoking"
        android:layout_alignStart="@+id/tvSMoking"
        android:contentDescription="@string/chetan"
        android:src="@drawable/ic_action_name"
        android:layout_above="@+id/cbDrinking"
        android:layout_alignRight="@+id/tvSMoking"
        android:layout_alignEnd="@+id/tvSMoking" />

</RelativeLayout>
